--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,7 +557,7 @@ section,
 }
 
 .about .imagen-about {
-  background-image: url("../img/img_v_3.jpg");
+  background-image: url("./../img/img_v_3.jpg");
   background-size: cover;
 }
 
