--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,9 +209,7 @@ h1 {
   color: var(--nav-hover-color);
 } */
 
-/*--------------------------------------------------------------
-# Global Footer
---------------------------------------------------------------*/
+/* ===Footer=== */
 .footer {
   background-color: var(--background-color);
   color: var(--default-color);
@@ -243,6 +241,18 @@ h1 {
 .footer .copyright p,
 .footer .copyright .credits {
   margin: 2px 0;
+}
+
+
+
+.footer-portfolio {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  background-color: var(--background-color);
+  color: var(--default-color);
+  padding: 30px 0;
+  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
 /*--------------------------------------------------------------
@@ -322,9 +332,7 @@ h1 {
   }
 }
 
-/*--------------------------------------------------------------
-# Global Page Titles & Breadcrumbs
---------------------------------------------------------------*/
+/* ===Page Titles & Breadcrumbs=== */
 .page-title {
   color: var(--default-color);
   background-color: var(--background-color);
@@ -810,17 +818,6 @@ section,
   transition: all 0.3s ease-in-out;
 }
 
-.portfolio .example-website {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.portfolio .portfolio-modal {
-  height: 95vh;
-}
-
 .portfolio .portfolio-filters {
   padding: 0;
   margin: 0 auto 20px auto;
@@ -1088,6 +1085,27 @@ section,
   margin: 0 0 15px 0 0 0;
   padding: 0;
 }
+
+
+/* ==Portfolio Page== */
+.portfolio-page {
+  padding: 10px 0;
+  margin: 10px 0;
+  /* height: 50vh; */
+}
+
+.portfolio-page .example-website {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.portfolio-page .example-website {
+  height: 70vh;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+}
+
 
 /*--------------------------------------------------------------
 # Team Section
