--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,42 +1,34 @@
-/* Fuentes */
+/* CSS V2 */
 :root {
-  --default-font: "Space Mono", monospace, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  /* --default-font: "Noto Sans",  system-ui, -apple-system, "Segoe UI", "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
-  --heading-font: "Poppins",  sans-serif;
-  --nav-font: "Space Mono",  monospace;
-  /* --font-size-fluid--small: 1.1vw; */
-  /* --spacing--container-tablet: 6vw; */
-  /* --font-size-fluid--main: 1.7vw; */
-  /* --font-size-fluid--medium: 2.85vw; */
+  --default-font: "Space Mono", monospace, system-ui, -apple-system, "Segoe UI",
+    "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+  --heading-font: "Poppins", sans-serif;
+  --nav-font: "Space Mono", monospace;
   --font-size-fluid--large: 5vh;
   --font-size-fluid--display: 10vh;
-  /* --font-size-fluid--display: 7rem; */
-  /* --font-size-mobile--small: .625rem; */
-  /* --font-size-mobile--main: 1rem; */
-  /* --font-size-mobile--medium: 1.25rem; */
   --font-size-mobile--large: 5vh;
   --font-size-mobile--display: 8vh;
-  /* --font-size-mobile--display: 2rem; */
 }
 
 /* Colores globales */
-:root { 
-  --background-color: #ffffff; /* BG */
-  --default-color: #212529; /* Default par la mayoría del contenido en texto */
-  --heading-color: #212529; /* Encabezados y titulos */
-  --accent-color: #4e4e4e; /* Color de resaltado (primario de la marca): buttons, links, y otros elementos */
-  --surface-color: #ffffff; /* Color de fondo para cajas dentro de las secciones (cards, icons boxes y otros elementos  que tienen que ser separados del bg general*/
-  --contrast-color: #ffffff; /* Color para contrastar el texto en fondos resaltados, encabezados o color por defecto */
+:root {
+  --background-color: #ffffff;
+  --default-color: #212529;
+  --heading-color: #212529;
+  --accent-color: #4e4e4e;
+  --surface-color: #ffffff;
+  --contrast-color: #ffffff;
 }
 
 /* Colores de Nav Menu */
 :root {
-  --nav-color: #212529;  /*Default color en el navmenu links principal */
-  --nav-hover-color: #34bf49; /* Principal navmenu links cuando estan hovered or active */
-  --nav-mobile-background-color: #ffffff; /* Color BG para movil */
-  --nav-dropdown-background-color: #ffffff; /*Color de fondo para dropdown items que aparecen cuando  hovering over primary navigation items */
-  --nav-dropdown-color: #212529; /* Para navigation links de dropdown items en el navigation menu. */
-  --nav-dropdown-hover-color: #34bf49; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-color: #212529;
+  --nav-hover-color: #34bf49;
+  --nav-mobile-background-color: #ffffff;
+  --nav-dropdown-background-color: #ffffff;
+  --nav-dropdown-color: #212529;
+  --nav-dropdown-hover-color: #34bf49;
 }
 
 .light-background {
@@ -57,9 +49,7 @@
   scroll-behavior: smooth;
 }
 
-/*--------------------------------------------------------------
-# General y Classes Compartidas
---------------------------------------------------------------*/
+/* === General y Classes Compartidas=== */
 body {
   color: var(--default-color);
   background-color: var(--background-color);
@@ -92,7 +82,7 @@ h1 {
 }
 
 @media (min-width: 1200px) {
-  h1{
+  h1 {
     font-size: var(--font-size-fluid--large);
   }
 }
@@ -102,9 +92,7 @@ h1 {
   background-color: var(--default-color);
 }
 
-/*--------------------------------------------------------------
-# Global Header
---------------------------------------------------------------*/
+/* ===Header=== */
 .header {
   color: var(--default-color);
   background-color: var(--background-color);
@@ -133,9 +121,7 @@ h1 {
   box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
 }
 
-/*--------------------------------------------------------------
-# Global Buttons
---------------------------------------------------------------*/
+/* ===Buttons=== */
 
 .btn-nav {
   border-bottom: 2px solid transparent;
@@ -214,7 +200,8 @@ h1 {
   background-color: var(--background-color);
   color: var(--default-color);
   padding: 60px 0;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 80%);
+  border-top: 1px solid
+    color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
 .footer a {
@@ -235,15 +222,14 @@ h1 {
   margin-top: 50px;
   position: relative;
   padding-top: 20px;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 80%);
+  border-top: 1px solid
+    color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
 .footer .copyright p,
 .footer .copyright .credits {
   margin: 2px 0;
 }
-
-
 
 .footer-portfolio {
   width: 100%;
@@ -252,7 +238,8 @@ h1 {
   background-color: var(--background-color);
   color: var(--default-color);
   padding: 30px 0;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 80%);
+  border-top: 1px solid
+    color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
 /*--------------------------------------------------------------
@@ -356,11 +343,11 @@ h1 {
   font-weight: 400;
 }
 
-.page-title .breadcrumbs ol li+li {
+.page-title .breadcrumbs ol li + li {
   padding-left: 10px;
 }
 
-.page-title .breadcrumbs ol li+li::before {
+.page-title .breadcrumbs ol li + li::before {
   content: "/";
   display: inline-block;
   padding-right: 10px;
@@ -422,7 +409,7 @@ section,
 }
 
 @media (min-width: 1199px) {
-  .hero h1{
+  .hero h1 {
     font-size: var(--font-size-fluid--display);
   }
 }
@@ -432,7 +419,6 @@ section,
   color: var(--default-color);
 }
 
-
 /*--------------------------------------------------------------
 # About Section
 --------------------------------------------------------------*/
@@ -440,7 +426,7 @@ section,
   color: var(--heading-color);
   /* font-size: 30px; */
   /* font-weight: 600; */
-  line-height: .95;
+  line-height: 0.95;
 }
 
 .about p {
@@ -465,14 +451,12 @@ section,
 # Problem Section
 --------------------------------------------------------------*/
 
-
 /*--------------------------------------------------------------
 # Why Us Section
 --------------------------------------------------------------*/
 .whyUs .whyUs-item:hover {
   cursor: pointer;
-  background: 
-  color-mix(in srgb, var(--default-color), transparent 96%);
+  background: color-mix(in srgb, var(--default-color), transparent 96%);
 }
 
 .whyUs .imagen-whyUs {
@@ -497,8 +481,7 @@ section,
 
 .services .services-item:hover {
   cursor: pointer;
-  background: 
-  color-mix(in srgb, var(--default-color), transparent 96%);
+  background: color-mix(in srgb, var(--default-color), transparent 96%);
   padding: 1rem;
 }
 
@@ -516,7 +499,6 @@ section,
   font-weight: 400;
   color: var(--heading-color);
 }
-
 
 /*--------------------------------------------------------------
 # Services Web Section
@@ -597,7 +579,6 @@ section,
   padding: 20px;
 }
 
-
 .tabs .tabs-item.link {
   padding: 20px;
   margin-bottom: 10px;
@@ -606,7 +587,6 @@ section,
 .tabs .service-item.link:hover {
   background: color-mix(in srgb, var(--default-color), transparent 96%);
 }
-
 
 /*--------------------------------------------------------------
 # Pricing Section
@@ -770,11 +750,11 @@ section,
   left: 15px;
 }
 
-.faq .custom-accordion .accordion-item .btn-link[aria-expanded=true] {
+.faq .custom-accordion .accordion-item .btn-link[aria-expanded="true"] {
   color: var(--accent-color);
 }
 
-.faq .custom-accordion .accordion-item .btn-link[aria-expanded=true]:before {
+.faq .custom-accordion .accordion-item .btn-link[aria-expanded="true"]:before {
   font-family: "bootstrap-icons" !important;
   content: "\F659";
   position: absolute;
@@ -880,8 +860,6 @@ section,
   align-items: center;
 }
 
-
-
 .portfolio .portfolio-item .portfolio-info .preview-link,
 .portfolio .portfolio-item .portfolio-info .details-link {
   /* position: absolute; */
@@ -948,7 +926,6 @@ section,
 }
 
 @media (max-width: 575px) {
-
   .portfolio-details .swiper-button-prev,
   .portfolio-details .swiper-button-next {
     display: none;
@@ -1086,7 +1063,6 @@ section,
   padding: 0;
 }
 
-
 /* ==Portfolio Page== */
 .portfolio-page {
   padding: 10px 0;
@@ -1105,7 +1081,6 @@ section,
   height: 70vh;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
-
 
 /*--------------------------------------------------------------
 # Team Section
@@ -1178,7 +1153,7 @@ section,
   color: var(--default-color);
 }
 
-.team .more.dark>span {
+.team .more.dark > span {
   color: var(--default-color);
 }
 
@@ -1393,7 +1368,7 @@ section,
   margin: 0;
 }
 
-.blog-details .meta-top ul li+li {
+.blog-details .meta-top ul li + li {
   padding-left: 20px;
 }
 
@@ -1413,7 +1388,8 @@ section,
 
 .blog-details .meta-bottom {
   padding-top: 10px;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
+  border-top: 1px solid
+    color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
 .blog-details .meta-bottom i {
@@ -1452,7 +1428,7 @@ section,
   display: inline-block;
 }
 
-.blog-details .meta-bottom .tags li+li::before {
+.blog-details .meta-bottom .tags li + li::before {
   padding-right: 6px;
   color: var(--default-color);
   content: ",";
@@ -1610,16 +1586,16 @@ section,
 # Contact Section
 --------------------------------------------------------------*/
 
-
 .contact .info p {
   margin-bottom: 30px;
   font-size: 15px;
 }
 
-.contact .info-item+.info-item {
+.contact .info-item + .info-item {
   padding-top: 20px;
   margin-top: 20px;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
+  border-top: 1px solid
+    color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
 .contact .info-item i {
@@ -1652,8 +1628,8 @@ section,
   padding-bottom: 8px;
 }
 
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email],
+.contact .php-email-form input[type="text"],
+.contact .php-email-form input[type="email"],
 .contact .php-email-form textarea {
   color: var(--default-color);
   background-color: var(--surface-color);
@@ -1663,20 +1639,20 @@ section,
   border-color: color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
-.contact .php-email-form input[type=text]:focus,
-.contact .php-email-form input[type=email]:focus,
+.contact .php-email-form input[type="text"]:focus,
+.contact .php-email-form input[type="email"]:focus,
 .contact .php-email-form textarea:focus {
   border-color: var(--accent-color);
 }
 
-.contact .php-email-form input[type=text]::placeholder,
-.contact .php-email-form input[type=email]::placeholder,
+.contact .php-email-form input[type="text"]::placeholder,
+.contact .php-email-form input[type="email"]::placeholder,
 .contact .php-email-form textarea::placeholder {
   color: color-mix(in srgb, var(--default-color), transparent 70%);
 }
 
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email] {
+.contact .php-email-form input[type="text"],
+.contact .php-email-form input[type="email"] {
   height: 48px;
   padding: 10px 15px;
 }
@@ -1686,7 +1662,7 @@ section,
   height: 290px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .php-email-form button[type="submit"] {
   background: var(--accent-color);
   color: var(--contrast-color);
   border: 0;
@@ -1695,6 +1671,6 @@ section,
   border-radius: 4px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .php-email-form button[type="submit"]:hover {
   background: color-mix(in srgb, var(--accent-color) 90%, black 15%);
 }
